@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: cmdMZ.test,v 1.14 2003/05/05 20:54:50 dgp Exp $
+# RCS: @(#) $Id: cmdMZ.test,v 1.15 2003/05/12 20:15:28 dgp Exp $
 
 if {[catch {package require tcltest 2.0.2}]} {
     puts stderr "Skipping tests in [info script]. tcltest 2.0.2 required."
@@ -22,6 +22,7 @@ namespace eval ::tcl::test::cmdMZ {
     namespace import ::tcltest::cleanupTests
     namespace import ::tcltest::makeFile
     namespace import ::tcltest::removeFile
+    namespace import ::tcltest::temporaryDirectory
     namespace import ::tcltest::test
 
 set ::tcltest::testConstraints(nonLinuxOnly) \
